Fixed styling for first and last element in list- Added dummy element at top and bottom of list to prevent the element from scrolling too far and triggering the scale animation

--- a/src/Search.module.css
+++ b/src/Search.module.css
@@ -30,19 +30,29 @@
     padding: 2em;
 
     flex-shrink: 0;
-    height: calc(100% / 2);
+    height: 300px;
     aspect-ratio: 0.8;
 
     scroll-snap-align: center;
 
     animation: slide;
-    animation-timeline: view();
+    animation-timeline: view(block);
 
     &:nth-child(odd) {
         background-color: #888888;
     }
     &:nth-child(even) {
         background-color: bisque;
+    }
+    &:first-child {
+        animation: none;
+        height: 70px;
+        background-color: white;
+    }
+    &:last-child {
+        animation: none;
+        height: 140px;
+        background-color: white;
     }
 }
 
